--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "post-update": "yarn upgrade --latest",
-  "generate": "nuxt generate",
+    "generate": "nuxt generate && mv ./dist/* ./",
   "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "devDependencies": {
